--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
-   "devDependencies": {
-    "decentraland-ecs": "latest",
-    "@dcl/eslint-config": "^1.0.1"
+  "devDependencies": {
+    "@dcl/eslint-config": "^1.0.1",
+    "decentraland-ecs": "^6.11.9"
   }
 }
